--- a/A_dbms/templates/dbms/custom/extra/js-custom-edit.html
+++ b/A_dbms/templates/dbms/custom/extra/js-custom-edit.html
@@ -1,7 +1,7 @@
 <script>
     $(function () {
         bindEditCustom();
-        bindAddCounterModalOk();
+        bindEditCustomModalOk();
     });
 
     function bindEditCustom() {
@@ -11,7 +11,7 @@
         })
     }
 
-    function bindAddCounterModalOk() {
+    function bindEditCustomModalOk() {
         $('#editCustomModalOk').click(function () {
             var postData = {};
             $('#editCustomModal').find('input,select').each(function () {
