--- a/A_dbms/templates/dbms/article/article/article-filter.html
+++ b/A_dbms/templates/dbms/article/article/article-filter.html
@@ -18,8 +18,8 @@
         {% endfor %}
     </label>
     <label>
-        <form class="navbar-form" style="display: inline">
-            <input type="text" class="form-control" placeholder="搜索客户或项目经理">
+        <form method="post" class="navbar-form" style="display: inline">
+            <input type="search" class="form-control" placeholder="搜索客户或项目经理">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
