--- a/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-stock.html
+++ b/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-stock.html
@@ -3,6 +3,7 @@
 
         <thead>
         <tr style="text-align: center">
+            <th>序号</th>
             <th>担保方式</th>
             <th>所有人</th>
             <th>标的公司</th>
@@ -17,6 +18,7 @@
             {% if lending_sure.sure_typ in stock_list %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
                     <tr warrant-nid={{ warrant.id }}>
+                        <td>{{ forloop.counter }}</td>
                         <td>{{ lending_sure.get_sure_typ_display }}</td>
                         <td>{{ warrant.stock_warrant.stock_owner }}</td>
                         <td>{{ warrant.stock_warrant.target }}</td>
