--- a/A_dbms/templates/dbms/provide/provide-agree-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-agree-scan.html
@@ -8,10 +8,12 @@
         {% include 'dbms/provide/agree/scan/provide-agree-tab.html' %}
         {% include 'dbms/provide/modl/notify-add-mod.html' %}
         {% include 'dbms/provide/modl/notify-del-mod.html' %}
+        {% include 'dbms/provide/modl/ascertain-add-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
     {% include 'dbms/provide/extra/js-notify-add.html' %}
     {% include 'dbms/provide/extra/js-notify-del.html' %}
+    {% include 'dbms/provide/extra/js-ascertain-add.html' %}
 {% endblock %}
