--- a/A_dbms/templates/dbms/article/article/article-table.html
+++ b/A_dbms/templates/dbms/article/article/article-table.html
@@ -15,6 +15,7 @@
             <th>项目经理</th>
             <th>项目助理</th>
             <th>风控专员</th>
+            <th>风险分类</th>
             <th>项目状态</th>
         </tr>
         </thead>
@@ -32,6 +33,7 @@
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
+                <td>{{ article.get_classification_display }}</td>
                 {#方式一：推荐#}
                 <td>{{ article.get_article_state_display }}</td>
             </tr>
