--- a/A_dbms/templates/dbms/custom/custom/custom-filter.html
+++ b/A_dbms/templates/dbms/custom/custom/custom-filter.html
@@ -26,7 +26,7 @@
 
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="text" class="form-control" placeholder="搜索客户名称">
+            <input type="search" name="_s" class="form-control" placeholder="姓名、地址、电话">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
