--- a/A_dbms/templates/dbms/login.html
+++ b/A_dbms/templates/dbms/login.html
@@ -3,17 +3,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="{% static 'dbms/js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <title>login</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
     </style>
 </head>
 <body>
-<form action="{% url 'dbms:login' %}" method="post">
+<form>
     {% csrf_token %}
     <p>姓名：<input type="text" name="user"></p>
     <p>密码：<input type="password" name="pwd"></p>
