--- a/A_dbms/templates/dbms/provide/modl/mod_form/ascertain-add.html
+++ b/A_dbms/templates/dbms/provide/modl/mod_form/ascertain-add.html
@@ -1,15 +1,15 @@
-<div id="form_notify_add">
+<div id="form_ascertain_add">
 
-    <div class="form-group"><!--通知金额-->
-        <label for="id_notify_money" class="col-sm-3 control-label">{{ form_notify_add.notify_money.label }}：</label>
-        <div class="col-sm-9">{{ form_notify_add.notify_money }}</div>
-        <label id="e_notify_money" class="pull-right">{{ form_notify_add.notify_money.errors }}</label>
+    <div class="form-group"><!--落实日期-->
+        <label for="id_ascertain_date" class="col-sm-3 control-label">{{ form_ascertain_add.ascertain_date.label }}：</label>
+        <div class="col-sm-9">{{ form_ascertain_add.ascertain_date }}</div>
+        <label id="e_ascertain_date" class="pull-right">{{ form_ascertain_add.ascertain_date.errors }}</label>
     </div>
 
-    <div class="form-group"><!--通知日期-->
-        <label for="id_notify_date" class="col-sm-3 control-label">{{ form_notify_add.notify_date.label }}：</label>
-        <div class="col-sm-9">{{ form_notify_add.notify_date }}</div>
-        <label id="e_notify_date" class="pull-right">{{ form_notify_add.notify_date.errors }}</label>
+    <div class="form-group"><!--落实情况-->
+        <label for="id_agree_remark" class="col-sm-3 control-label">{{ form_ascertain_add.agree_remark.label }}：</label>
+        <div class="col-sm-9">{{ form_ascertain_add.agree_remark }}</div>
+        <label id="e_agree_remark" class="pull-right">{{ form_ascertain_add.agree_remark.errors }}</label>
     </div>
 
 </div>
