--- a/A_dbms/templates/dbms/warrant/extra/js-warrant-edit.html
+++ b/A_dbms/templates/dbms/warrant/extra/js-warrant-edit.html
@@ -28,6 +28,9 @@
             case ('5'):
                 $('#form_ground_add_edit').show();
                 break;
+            case ('11'):
+                $('#form_receivable_add_edit').show();
+                break;
             case ('99'):
                 $('#form_hypothecs_add_eidt').show();
                 break;
