--- a/A_dbms/templates/dbms/warrant/modl/warrant-edit-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/warrant-edit-mod.html
@@ -16,9 +16,11 @@
                     {% include 'dbms/warrant/modl/mod_form/warrant-edit.html' %}
                     {% if warrant_typ_n == 1 %}
                         {% include 'dbms/warrant/modl/mod_form/house-add-edit.html' %}
-                    {% elif warrant_typ_n == 2 %}
+                    {% elif warrant_typ_n == 5 %}
                         {% include 'dbms/warrant/modl/mod_form/ground-add-edit.html' %}
-                    {% elif warrant_typ_n == 9 %}
+                    {% elif warrant_typ_n == 11 %}
+                        {% include 'dbms/warrant/modl/mod_form/receivable-add-edit.html' %}
+                    {% elif warrant_typ_n == 99 %}
                         {% include 'dbms/warrant/modl/mod_form/hypothec-add-edit.html' %}
                     {% endif %}
                 </form>
