--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry.html
@@ -17,8 +17,10 @@
     <div class="panel-body row" style="padding: 1px;">
         {% if warrant_typ == 1 %}
             {% include 'dbms/warrant/scan/warrant-summry-house.html' %}
-        {% elif  warrant_typ == 2 %}
+        {% elif  warrant_typ == 5 %}
             {% include 'dbms/warrant/scan/warrant-summry-ground.html' %}
+        {% elif  warrant_typ == 11 %}
+            {% include 'dbms/warrant/scan/warrant-summry-receiveable.html' %}
         {% elif  warrant_typ == 99 %}
             {% include 'dbms/warrant/scan/warrant-summry-hypothec.html' %}
         {% else %}
