--- a/A_dbms/templates/dbms/warrant/warrant/warrant-filter.html
+++ b/A_dbms/templates/dbms/warrant/warrant/warrant-filter.html
@@ -18,7 +18,7 @@
     </label>
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="text" class="form-control" placeholder="搜索权证编号">
+            <input type="search" name="_s" class="form-control" placeholder="搜索权证编码">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
