--- a/templates/login.html
+++ b/templates/login.html
@@ -11,15 +11,13 @@
             <h2 class="form-signin-heading">系统登录</h2>
             <div class="form-group">
                 <label for="inputEmail" class="sr-only">Username</label>
-                <input type="text" id="inputEmail" name="username"
-                       class="form-control" placeholder="用户名"
-                       required autofocus>
+                <input type="text" id="inputEmail" name="username" class="form-control" placeholder="用户名" required
+                       autofocus>
             </div>
             <div class="form-group">
                 <label for="inputPassword" class="sr-only">Password</label>
-                <input type="password" id="inputPassword" name="password"
-                       class="form-control"
-                       placeholder="密码" required>
+                <input type="password" id="inputPassword" name="password" class="form-control" placeholder="密码"
+                       required>
             </div>
             <span style="color: red">{{ error_msg }}</span>
             <button class="btn btn-lg btn-primary btn-block" type="submit">
