--- a/A_dbms/templates/dbms/provide/extra/js-ascertain-add.html
+++ b/A_dbms/templates/dbms/provide/extra/js-ascertain-add.html
@@ -38,6 +38,7 @@
                         window.location.reload();
                     } else {
                         alert(arg.message);
+                        $('#e_agree_state').text(arg.forme.agree_state);
                         $('#e_ascertain_date').text(arg.forme.ascertain_date);
                         $('#e_agree_remark').text(arg.forme.agree_remark);
                     }
