--- a/A_dbms/templates/dbms/provide/provide-agree-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-agree-scan.html
@@ -9,6 +9,7 @@
         {% include 'dbms/provide/modl/notify-add-mod.html' %}
         {% include 'dbms/provide/modl/notify-del-mod.html' %}
         {% include 'dbms/provide/modl/ascertain-add-mod.html' %}
+        {% include 'dbms/provide/modl/counter-sign-add-mod.html' %}
     </div>
 {% endblock %}
 
@@ -16,4 +17,5 @@
     {% include 'dbms/provide/extra/js-notify-add.html' %}
     {% include 'dbms/provide/extra/js-notify-del.html' %}
     {% include 'dbms/provide/extra/js-ascertain-add.html' %}
+    {% include 'dbms/provide/extra/js-counter-sign-add.html' %}
 {% endblock %}
