--- a/A_dbms/templates/dbms/agree/agree/agree-table.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-table.html
@@ -12,7 +12,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for agree in p_agree_list %}
+        {% for agree in p_list %}
             <tr>
                 <td><a href="{% url 'dbms:agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a></td>
                 <td>{{ agree.lending.summary.custom }}</td>
