--- a/A_dbms/templates/dbms/provide/modl/mod_form/ascertain-add.html
+++ b/A_dbms/templates/dbms/provide/modl/mod_form/ascertain-add.html
@@ -1,12 +1,19 @@
 <div id="form_ascertain_add">
 
-    <div class="form-group"><!--落实日期-->
-        <label for="id_ascertain_date" class="col-sm-3 control-label">{{ form_ascertain_add.ascertain_date.label }}：</label>
+    <div class="form-group"><!--签订情况-->
+        <label for="id_agree_state" class="col-sm-3 control-label">{{ form_ascertain_add.agree_state.label }}：</label>
+        <div class="col-sm-9">{{ form_ascertain_add.agree_state }}</div>
+        <label id="e_agree_state" class="pull-right">{{ form_ascertain_add.agree_state.errors }}</label>
+    </div>
+
+    <div class="form-group"><!--签订日期-->
+        <label for="id_ascertain_date"
+               class="col-sm-3 control-label">{{ form_ascertain_add.ascertain_date.label }}：</label>
         <div class="col-sm-9">{{ form_ascertain_add.ascertain_date }}</div>
         <label id="e_ascertain_date" class="pull-right">{{ form_ascertain_add.ascertain_date.errors }}</label>
     </div>
 
-    <div class="form-group"><!--落实情况-->
+    <div class="form-group"><!--备注-->
         <label for="id_agree_remark" class="col-sm-3 control-label">{{ form_ascertain_add.agree_remark.label }}：</label>
         <div class="col-sm-9">{{ form_ascertain_add.agree_remark }}</div>
         <label id="e_agree_remark" class="pull-right">{{ form_ascertain_add.agree_remark.errors }}</label>
