--- a/A_dbms/templates/dbms/agree/agree/agree-filter.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-filter.html
@@ -6,7 +6,7 @@
             <a class="btn btn btn-primary btn-sm" href="{% url 'dbms:agree_all' %}">全部</a>
         {% endif %}
         {# 方式一：#}
-        {% for agree_state in agree_state_list %}
+        {% for agree_state in AGREE_STATE_LIST %}
             {% if agree_state.0 == kwargs.agree_state %}
                 <a class="active btn btn-primary btn-sm"
                    href="{% url 'dbms:agree' agree_state=agree_state.0 %}">{{ agree_state.1 }} </a>
@@ -18,7 +18,7 @@
     </label>
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="text" class="form-control" placeholder="搜索客户或银行">
+            <input type="search" name="_s" class="form-control" placeholder="合同编号,客户,银行,纪要">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
