--- a/A_dbms/templates/dbms/appraisal/appraisal/appraisal-filter.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal/appraisal-filter.html
@@ -1,7 +1,26 @@
 <div>
     <label>
+        {% if kwargs.article_state == None %}
+            <a class="active btn btn-primary btn-sm" href="{% url 'dbms:appraisal_all' %}">全部</a>
+        {% else %}
+            <a class="btn btn btn-primary btn-sm" href="{% url 'dbms:appraisal_all' %}">全部</a>
+        {% endif %}
+
+        {# 方式一：#}
+        {% for item in ARTICLE_STATE_LIST %}
+            {% if item.0 == kwargs.article_state %}
+                <a class="active btn btn-primary btn-sm"
+                   href="{% url 'dbms:appraisal' article_state=item.0 %}"> {{ item.1 }} </a>
+            {% else %}
+                <a class="btn btn-primary btn-sm"
+                   href="{% url 'dbms:appraisal' article_state=item.0 %}">{{ item.1 }}</a>
+            {% endif %}
+        {% endfor %}
+    </label>
+    <label>
         <form class="navbar-form" style="display: inline">
-            <input type="text" class="form-control" placeholder="搜索客户或项目经理">
+            {#            {% csrf_token %}#}
+            <input type="search" name="_s" class="form-control" placeholder="客户、纪要，经理、助理、专员">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
