--- a/A_dbms/templates/dbms/article/agree/tab/provide.html
+++ b/A_dbms/templates/dbms/article/agree/tab/provide.html
@@ -1,11 +1,5 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>放款日期</th>
@@ -18,15 +12,17 @@
         </thead>
         <tbody>
         <tr>
-            {% for provide in agree_obj.provide_agree.all %}
-                <tr>
-                    <td>{{ provide.provide_date }}</td>
-                    <td>{{ provide.get_provide_typ_display }}</td>
-                    <td>{{ provide.provide_money }}</td>
-                    <td>{{ provide.due_date }}</td>
-                    <td>{{ provide.get_implement_display }}</td>
-                    <td>{{ provide.get_status_display }}</td>
-                </tr>
+            {% for notify in agree_obj.notify_agree.all %}
+                {% for provide in notify.provide_notify.all %}
+                    <tr>
+                        <td>{{ provide.provide_date }}</td>
+                        <td>{{ provide.get_provide_typ_display }}</td>
+                        <td>{{ provide.provide_money }}</td>
+                        <td>{{ provide.due_date }}</td>
+                        <td>{{ provide.get_implement_display }}</td>
+                        <td>{{ provide.get_article_state_display }}</td>
+                    </tr>
+                {% endfor %}
             {% endfor %}
         </tr>
         </tbody>
