--- a/A_dbms/templates/dbms/meeting/meeting/meeting-filter.html
+++ b/A_dbms/templates/dbms/meeting/meeting/meeting-filter.html
@@ -24,6 +24,13 @@
         {% endfor %}
     </label>
 
+    <label>
+        <form class="navbar-form" style="display: inline">
+            <input type="search" name="_s" class="form-control" placeholder="审报会编号">
+            <button type="submit" class="btn btn-primary btn-sm">搜索</button>
+        </form>
+    </label>
+
     <label class="pull-right">
         <a class="btn btn-primary btn-sm" id="addMeeting">
             添加评审会
