--- a/A_dbms/templates/dbms/appraisal/extra/js-article-sign.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-article-sign.html
@@ -22,8 +22,8 @@
             });
             var rcd = $('#id_rcd_opinion').val();
             postData['rcd_opinion'] = rcd;
-            var convenorl = $('#id_convenor_opinionl').val();
-            postData['convenor_opinionl'] = convenorl;
+            var convenor = $('#id_convenor_opinion').val();
+            postData['convenor_opinion'] = convenor;
             var sign = $('#id_sign_detail').val();
             postData['sign_detail'] = sign;
             var postDataStr = JSON.stringify(postData);
