--- a/A_dbms/templates/dbms/appraisal/lending/tab/counter-chattel.html
+++ b/A_dbms/templates/dbms/appraisal/lending/tab/counter-chattel.html
@@ -5,6 +5,7 @@
         <tr style="text-align: center">
             <th>担保方式</th>
             <th>所有人</th>
+            <th>动产类型</th>
             <th>详情</th>
             {% if page_title == '放款次序' %}
                 <th>操作</th>
@@ -13,12 +14,13 @@
         </thead>
         <tbody class="guarantee-tb">
         {% for lending_sure in lending_obj.sure_lending.all %}
-            {% if lending_sure.sure_typ in RECEIVABLE_LIST %}
+            {% if lending_sure.sure_typ in CHATTEL_LIST %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
                     <tr guarantee-nid={{ warrant.id }} sure-typ-nid={{ lending_sure.sure_typ }}>
                         <td>{{ lending_sure.get_sure_typ_display }}</td>
-                        <td>{{ warrant.receive_warrant.receive_owner }}</td>
-                        <td>{{ warrant.receive_warrant.receivable_detail }}</td>
+                        <td>{{ warrant.chattel_warrant.chattel_owner }}</td>
+                        <td>{{ warrant.chattel_warrant.get_chattel_typ_display }}</td>
+                        <td>{{ warrant.chattel_warrant.chattel_detail }}</td>
                         {% if page_title == '放款次序' %}
                             <td><a class="btn btn-danger btn-xs delGuaranteeB">删除</a></td>
                         {% endif %}
