--- a/A_dbms/templates/dbms/appraisal/lending/tab/counter-house.html
+++ b/A_dbms/templates/dbms/appraisal/lending/tab/counter-house.html
@@ -23,7 +23,7 @@
         </thead>
         <tbody class="guarantee-tb">
         {% for lending_sure in lending_obj.sure_lending.all %}
-            {% if lending_sure.sure_typ in house_list %}
+            {% if lending_sure.sure_typ in HOUSE_LIST %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
                     <tr guarantee-nid={{ warrant.id }} sure-typ-nid={{ lending_sure.sure_typ }}>
                         <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
