--- a/A_dbms/templates/dbms/appraisal/modl/guarantee-add-mod.html
+++ b/A_dbms/templates/dbms/appraisal/modl/guarantee-add-mod.html
@@ -19,6 +19,7 @@
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-ground-add.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-receivable-add.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-stock-add.html' %}
+                    {% include 'dbms/appraisal/modl/mod_form/guarantee-chattel-add.html' %}
                 </form>
             </div>
             <div class="modal-footer">
