--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/article-sign.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/article-sign.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="form-group"><!--招集人意见-->
-        <label for="id_convenor_opinionl" class="col-sm-3 control-label">{{ form_article_sign.convenor_opinion.label }}：</label>
+        <label for="id_convenor_opinion" class="col-sm-3 control-label">{{ form_article_sign.convenor_opinion.label }}：</label>
         <div class="col-sm-9">{{ form_article_sign.convenor_opinion }}</div>
         <label id="e_convenor_opinion" class="pull-right">{{ form_article_sign.convenor_opinion.errors }}</label>
     </div>
