--- a/A_dbms/templates/dbms/custom/custom/custom-table.html
+++ b/A_dbms/templates/dbms/custom/custom/custom-table.html
@@ -32,9 +32,9 @@
                 <td>{{ custom.linkman }}</td>
                 <td>{{ custom.contact_num }}</td>
                 <td>{{ custom.credit_amount }}</td>
-                <td>{{ custom.flow_loan }}</td>
-                <td>{{ custom.accept_loan }}</td>
-                <td>{{ custom.back_loan }}</td>
+                <td>{{ custom.custom_flow }}</td>
+                <td>{{ custom.custom_accept }}</td>
+                <td>{{ custom.custom_back }}</td>
             </tr>
         {% endfor %}
         </tbody>
