--- a/A_dbms/templates/dbms/agree/scan/tab/agree-counters.html
+++ b/A_dbms/templates/dbms/agree/scan/tab/agree-counters.html
@@ -31,11 +31,16 @@
                 {% else %}
                     <td>
                         {% for warrant in counter.warrant_counter.warrant.all %}
+                            <!-- WARRANT_TYP_LIST = [
+                                (1, '房产'), (5, '土地'), (11, '应收'), (21, '股权'),
+                                (31, '票据'), (41, '车辆'), (51, '动产'), (99, '他权')]-->
                             {% if warrant.warrant_typ == 1 or warrant.warrant_typ == 5 %}
-                                {% for ownership in warrant.ownership_warrant.all %}
-                                    {{ ownership.owner.name }}
-                                    {% if not forloop.last %}、{% endif %}
-                                {% endfor %}
+                                {% if forloop.first %}
+                                    {% for ownership in warrant.ownership_warrant.all %}
+                                        {{ ownership.owner.name }}
+                                        {% if not forloop.last %}、{% endif %}
+                                    {% endfor %}
+                                {% endif %}
                             {% elif warrant.warrant_typ == 11 %}
                                 {{ warrant.receive_warrant.receive_owner }}
                             {% elif warrant.warrant_typ == 21 %}
