--- a/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
@@ -20,42 +20,46 @@
             console.log(selected_sure_typ);
             $('.guarantee-extend').hide();
             switch (selected_sure_typ) {
-                case ('1'):
+                case ('1'):{#<--企业保证-->#}
                     $('#form_lendingcustoms_c_add').show();
                     break;
-                case ('2'):
+                case ('2'):{#<--个人保证-->#}
                     $('#form_lendingcustoms_p_add').show();
                     break;
-                case ('11'):
+                case ('11'):{#<--房产抵押-->#}
                     $('#form_lendinghouse_add').show();
                     break;
-                case ('21'):
+                case ('21'):{#<--房产顺位-->#}
                     $('#form_lendinghouse_add').show();
                     break;
-                case ('42'):
+                case ('42'):{#<--房产监管-->#}
                     $('#form_lendinghouse_add').show();
                     break;
-                case ('52'):
+                case ('52'):{#<--房产预售-->#}
                     $('#form_lendinghouse_add').show();
                     break;
-                case ('12'):
+                case ('12'):{#<--土地抵押-->#}
                     $('#form_lendingground_add').show();
                     break;
-                case ('22'):
+                case ('22'):{#<--土地顺位-->#}
                     $('#form_lendingground_add').show();
                     break;
-                case ('43'):
+                case ('43'):{#<--土地监管-->#}
                     $('#form_lendingground_add').show();
                     break;
-                case ('53'):
+                case ('53'):{#<--土地预售-->#}
                     $('#form_lendingground_add').show();
                     break;
-                case ('31'):
+                case ('31'):{#<--应收质押-->#}
                     $('#form_lendinggreceivable_add').show();
                     break;
-                case ('32'):
+                case ('32'):{#<--股权质押-->#}
                     $('#form_lendingstock_add').show();
                     break;
+                case ('13'): {#<--动产抵押-->#}
+                    $('#form_lendingchattel_add').show();
+                    break;
+
                 default:
                     $('.guarantee-extend').hide()
             }
