--- a/A_dbms/templates/dbms/appraisal/scan/appraisal-tab.html
+++ b/A_dbms/templates/dbms/appraisal/scan/appraisal-tab.html
@@ -13,6 +13,9 @@
         <li role="presentation">
             <a href="#sign" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">签批详情</a></li>
+        <li role="presentation">
+            <a href="#article-change" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab">变更情况</a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
@@ -24,5 +27,7 @@
             {% include 'dbms/appraisal/scan/tab/lending_order.html' %} </div>
         <div role="tabpanel" class="tab-pane" id="sign"><!--签批详情-->
             {% include 'dbms/appraisal/scan/tab/sign.html' %} </div>
+        <div role="tabpanel" class="tab-pane" id="article-change"><!--项目变更-->
+            {% include 'dbms/appraisal/scan/tab/article-change.html' %} </div>
     </div>
 </div>
