--- a/A_dbms/templates/dbms/appraisal/scan/tab/single.html
+++ b/A_dbms/templates/dbms/appraisal/scan/tab/single.html
@@ -1,17 +1,10 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>额度类型</th>
             <th>授信额度（元）</th>
             <th>费率（%）</th>
-            <th>放款金额</th>
             {% if page_title == '项目评审' %}
                 <th>操作</th>
             {% endif %}
@@ -23,7 +16,6 @@
                 <td>{{ single.get_credit_model_display }}</td>
                 <td>{{ single.credit_amount }}</td>
                 <td>{{ single.flow_rate }}</td>
-                <td>{{ single.amount }}</td>
                 {% if page_title == '项目评审' %}
                     <td><a class="btn btn-danger btn-xs delSingleQuotaB">删除</a></td>
                 {% endif %}
