--- a/A_dbms/templates/dbms/article/agree/article-agree-tab.html
+++ b/A_dbms/templates/dbms/article/agree/article-agree-tab.html
@@ -22,7 +22,9 @@
         <li role="presentation">
             <a href="#agree-stock " style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">股权</a></li>
-
+        <li role="presentation">
+            <a href="#agree-chattel" style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">动产</a></li>
 
         <li role="presentation">
             <a href="#charge" style="background-color: #f5f5f5"
@@ -58,6 +60,8 @@
             {% include 'dbms/warrant/agree/scan/tab/agree-receive.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="agree-stock"><!--股权质押-->
             {% include 'dbms/warrant/agree/scan/tab/agree-stock.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="agree-chattel"><!--动产抵押-->
+            {% include 'dbms/warrant/agree/scan/tab/agree-chattel.html' %}</div>
 
         <div role="tabpanel" class="tab-pane" id="charge"><!--收费-->
             {% include 'dbms/article/agree/tab/charge.html' %} </div>
