--- a/A_dbms/templates/dbms/article/scan/tab/lending.html
+++ b/A_dbms/templates/dbms/article/scan/tab/lending.html
@@ -1,11 +1,5 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>发放次序</th>
@@ -18,7 +12,7 @@
             <tr>
                 <td>{{ lending.get_order_display }}</td>
                 <td>{{ lending.order_amount }}</td>
-                <td>{{ lending.amount }}</td>
+                <td>{{ lending.lending_provide_sum }}</td>
             <tr>
         {% endfor %}
         </tbody>
