--- a/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab.html
@@ -19,6 +19,9 @@
         <li role="presentation">
             <a href="#provide-stock " style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">股权</a></li>
+        <li role="presentation">
+            <a href="#provide-chattel" style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">动产</a></li>
         <li role="presentation" class="active">
             <a href="#loan-notice " style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">放款通知</a></li>
@@ -38,6 +41,8 @@
             {% include 'dbms/warrant/agree/scan/tab/agree-receive.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="provide-stock"><!--股权质押-->
             {% include 'dbms/warrant/agree/scan/tab/agree-stock.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="provide-chattel"><!--动产抵押-->
+            {% include 'dbms/warrant/agree/scan/tab/agree-chattel.html' %}</div>
         <div role="tabpanel" class="tab-pane active" id="loan-notice"><!--放款通知-->
             {% include 'dbms/provide/agree/scan/tab/loan-notice.html' %}</div>
     </div>
