--- a/A_dbms/templates/dbms/warrant/agree/scan/agree-tab.html
+++ b/A_dbms/templates/dbms/warrant/agree/scan/agree-tab.html
@@ -16,6 +16,9 @@
         <li role="presentation">
             <a href="#agree-stock " style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">股权</a></li>
+        <li role="presentation">
+            <a href="#agree-chattel" style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">动产</a></li>
     </ul>
 
     <!-- Tab panes -->
@@ -30,5 +33,7 @@
             {% include 'dbms/warrant/agree/scan/tab/agree-receive.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="agree-stock"><!--股权质押-->
             {% include 'dbms/warrant/agree/scan/tab/agree-stock.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="agree-chattel"><!--动产抵押-->
+            {% include 'dbms/warrant/agree/scan/tab/agree-chattel.html' %}</div>
     </div>
 </div>
