--- a/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-chattel.html
+++ b/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-chattel.html
@@ -1,48 +1,31 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
             <th>担保方式</th>
-            <th>所有权人</th>
-            <th>土地地址</th>
-            <th>土地面积</th>
-            <th>土地用途</th>
-            <th>产权证</th>
+            <th>所有人</th>
+            <th>动产类型</th>
+            <th>详情</th>
             <th>他权情况</th>
             <th>入库情况</th>
             {% if PAGE_TITAL == '权证管理' %}
                 <th>操作</th>
             {% endif %}
+
         </tr>
         </thead>
         <tbody class="agree-warrant-tb">
         {% for lending_sure in lending_obj.sure_lending.all %}
-            {% if lending_sure.sure_typ in GROUND_LIST %}
+            {% if lending_sure.sure_typ in CHATTEL_LIST %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
                     <tr warrant-nid={{ warrant.id }}>
                         <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
                             {{ forloop.counter }}</a></td>
                         <td>{{ lending_sure.get_sure_typ_display }}</td>
-                        <td>
-                            {% for ownership in warrant.ownership_warrant.all %}
-                                {{ ownership.owner }}{% if not forloop.last %}、{% endif %}
-                            {% endfor %}
-                        </td>
-                        <td>{{ warrant.ground_warrant.ground_locate }}</td>
-                        <td>{{ warrant.ground_warrant.ground_area }}</td>
-                        <td>{{ warrant.ground_warrant.get_ground_app_display }}</td>
-                        <td>
-                            {% for ownership in warrant.ownership_warrant.all %}
-                                {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
-                            {% endfor %}
-                        </td>
+                        <td>{{ warrant.chattel_warrant.chattel_owner }}</td>
+                        <td>{{ warrant.chattel_warrant.get_chattel_typ_display }}</td>
+                        <td>{{ warrant.chattel_warrant.chattel_detail }}</td>
                         <td>
                             {% for ypothec in warrant.ypothec_m_agree.all %}
                                 {% if ypothec.agree.id == agree_obj.id %}
