--- a/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-house.html
+++ b/A_dbms/templates/dbms/warrant/agree/scan/tab/agree-house.html
@@ -19,7 +19,7 @@
         </thead>
         <tbody class="agree-warrant-tb">
         {% for lending_sure in lending_obj.sure_lending.all %}
-            {% if lending_sure.sure_typ in house_list %}
+            {% if lending_sure.sure_typ in HOUSE_LIST %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
                     <tr warrant-nid={{ warrant.id }}>
                         <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
